<resources>
    <string name="app_name">PhotoViewer</string>
    <string name="action_log">log</string>
    <string name="action_settings">settings</string>
    <!-- Preference Titles -->
    <string name="messages_header">NASの追加</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="smb_ip_title">アドレス SMB / NAS IP(0.0.0.0)</string>
    <string name="smb_dir_title">開始ディレクトリ</string>
    <string name="smb_user_title">ユーザー</string>
    <string name="smb_pass_title">パスワード</string>
    <string name="preference_smb_ip_default">0.0.0.0</string>
    <string name="preference_smb_dir_default">/</string>
    <string name="add_nas">NASを追加する</string>
    <string name="add_nas_button">追加する</string>
    <string name="smb_connection_failure">このアドレスに接続できません</string>
    <string name="smb_connection_progress">検索中...</string>
    <string name="close">閉じる</string>
    <string name="submit">追加</string>
    <string name="photo_unit">個</string>
    <string name="load_comp">ロード済</string>
</resources>