<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="smb_ip"
            app:title="@string/smb_ip_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="smb_dir"
            app:title="@string/smb_dir_title"
            app:defaultValue="@string/preference_smb_dir_default"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="smb_user"
            app:title="@string/smb_user_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            app:key="smb_pass"
            app:title="@string/smb_pass_title"
            android:inputType="textPassword"
            app:useSimpleSummaryProvider="true" />

        <Preference
            android:id="@+id/add_nas_button"
            app:icon="@android:drawable/ic_input_add"
            app:key="add_nas_button"
            app:title="@string/add_nas_button" />
    </PreferenceCategory>
</PreferenceScreen>